--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anika Tahsin Meem | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
-    <!-- Navigation Bar -->
-    <header>
+    <!-- Sidebar Navigation -->
+    <aside class="sidebar">
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -21,89 +22,70 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </aside>
 
-    <!-- About Me Section -->
-    <section id="about">
-        <h1>Anika Tahsin Meem</h1>
-        <p>Bashundhara R/A, Dhaka, Bangladesh</p>
-        <p>Email: anika.meem@northsouth.edu | Phone: +8801976364855</p>
-        <p>Welcome to my portfolio! I am a researcher specializing in data science, medical image processing, and computational psychology.</p>
-        <a href="https://www.linkedin.com/in/anika-tahsin-meem" target="_blank">LinkedIn</a> | 
-        <a href="https://github.com/AnikaMeem" target="_blank">GitHub</a> | 
-        <a href="https://scholar.google.com/citations?hl=en&user=HMVsjfsAAAAJ&view_op=list_works" target="_blank">Google Scholar</a>
-    </section>
+    <!-- Main Content -->
+    <main>
+        <!-- About Section -->
+        <section id="about" class="section">
+            <h1>Anika Tahsin Meem</h1>
+            <p>Email: anika.meem@northsouth.edu | Phone: +8801976364855</p>
+            <p>👋 Hello! I’m a dedicated Research Assistant at the Center of Applied and Computational Science, North South University. My research interests include Medical Image Processing, Computer Vision, Machine Learning, and Computational Mathematics, with exciting thesis projects in Cryptocurrency (Time Series) and Healthcare.</p>
+            <p>Currently, I’m diving into Data Science, Deep Learning, Natural Language Processing (NLP), and Computational Psychology, continuously expanding my knowledge base. With a solid foundation in programming languages and frameworks, including Python, Django, TensorFlow/Keras, JavaScript, and more, I’m passionate about leveraging technology to drive impactful research.</p>
+            <p>As a curious learner and a "blank canvas," I thrive on exploring new ideas and tackling challenges. Join me on this journey of discovery and innovation!</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/anika-tahsin-meem" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/AnikaMeem" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://scholar.google.com/citations?hl=en&user=HMVsjfsAAAAJ&view_op=list_works" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+            </div>
+        </section>
 
-    <!-- Resume Section -->
-    <section id="resume">
-        <h2>Resume</h2>
-        <p><a href="CV_Anika_Tahsin_Meem.pdf" download>Download my resume</a></p>
-    </section>
+        <!-- Image Section -->
+        <section id="image" class="section">
+            <h2>My Photo</h2>
+            <img src="your-image.jpg" alt="Anika Tahsin Meem" class="profile-image">
+        </section>
+        
+        <!-- Education Section -->
+        <section id="education" class="section">
+            <h2>Education</h2>
+            <p>Bachelor of Science in Computer Science and Engineering, North South University</p>
+            <p>CGPA: 3.43/4.0</p>
+        </section>
 
-    <!-- Education Section -->
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li>
-                <strong>Bachelor of Science in Computer Science and Engineering</strong>, North South University, Dhaka, Bangladesh
-                <p>CGPA: 3.43/4.0</p>
-            </li>
-        </ul>
-    </section>
+        <!-- Experience Section -->
+        <section id="experience" class="section">
+            <h2>Experience</h2>
+            <ul>
+                <li><strong>IT Coordinator</strong> at ISD, Dhaka (Jan 2023 - Oct 2023)</li>
+                <li><strong>Software Development Intern</strong> at GaoTek Inc., New York (Oct 2021 - Feb 2023)</li>
+                <li><strong>Research Assistant</strong> at North South University, Dhaka (Aug 2023 - Present)</li>
+            </ul>
+        </section>
 
-    <!-- Work Experience Section -->
-    <section id="experience">
-        <h2>Work Experience</h2>
-        <ul>
-            <li>
-                <strong>IT Coordinator</strong>, International Study Destination (ISD), Dhaka, Bangladesh
-                <p>Jan 2023 - Oct 2023</p>
-            </li>
-            <li>
-                <strong>Software Development Intern</strong> (Remote), GaoTek Inc., New York
-                <p>Oct 2021 - Feb 2023</p>
-            </li>
-            <li>
-                <strong>Research Assistant</strong>, North South University, Dhaka, Bangladesh
-                <p>Aug 2023 - Present</p>
-            </li>
-        </ul>
-    </section>
+        <!-- Projects Section -->
+        <section id="projects" class="section">
+            <h2>Projects</h2>
+            <p>Project details like GI Cancer Image Segmentation, Cryptocurrency Price Prediction, AI-Powered Healthcare Platform, etc.</p>
+        </section>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Gastrointestinal Cancer Image Segmentation</strong>
-                <p>Developed a Vision Transformer-based model with Grad-CAM for medical image segmentation.</p>
-            </li>
-            <li><strong>Cryptocurrency Price Prediction</strong>
-                <p>Created a deep learning model to predict cryptocurrency price drops, achieving high accuracy with RMSE values between 0.0089 and 1.3229.</p>
-            </li>
-            <li><strong>AI-Powered Healthcare Platform</strong>
-                <p>Multi-disease detection system with up to 99% accuracy, integrated with a telemedicine platform.</p>
-            </li>
-        </ul>
-    </section>
+        <!-- Skills Section -->
+        <section id="skills" class="section">
+            <h2>Skills</h2>
+            <p>Python, TensorFlow/Keras, Django, HTML/CSS, JavaScript, MATLAB, Comsol, Tecplot, Illustration</p>
+        </section>
 
-    <!-- Skills Section -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <p>Python, MATLAB, TensorFlow, Machine Learning, Deep Learning, Django, HTML/CSS, JavaScript</p>
-    </section>
+        <!-- Interests Section -->
+        <section id="interests" class="section">
+            <h2>Interests</h2>
+            <p>Data Science, Medical Image Processing, Computational Psychology, CFD, Poetry, Painting</p>
+        </section>
 
-    <!-- Interests Section -->
-    <section id="interests">
-        <h2>Interests</h2>
-        <p>Data Science, Medical Image Processing, Computational Psychology, CFD, Poetry, Painting</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: anika.meem@northsouth.edu</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/anika-tahsin-meem">https://www.linkedin.com/in/anika-tahsin-meem</a></p>
-    </section>
-
+        <!-- Contact Section -->
+        <section id="contact" class="section">
+            <h2>Contact</h2>
+            <p>Email: anika.meem@northsouth.edu</p>
+        </section>
+    </main>
 </body>
 </html>
