--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Image Section -->
         <section id="image" class="section">
             <h2>My Photo</h2>
-            <img src="your-image.jpg" alt="Anika Tahsin Meem" class="profile-image">
+            <img src="formal_image.jpg" alt="Anika Tahsin Meem" class="profile-image">
         </section>
         
         <!-- Education Section -->
