--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <a href="https://www.linkedin.com/in/anika-tahsin-meem" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/AnikaMeem" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://scholar.google.com/citations?hl=en&user=HMVsjfsAAAAJ&view_op=list_works" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+                <p><a href="CV_Anika_Tahsin_Meem.pdf" download>Download my resume</a></p>
             </div>
         </section>
 
