--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <!-- Sidebar Navigation -->
     <aside class="sidebar">
+        <!-- Image Section -->
+        <img src="formal_image.png" alt="Anika Tahsin Meem" class="profile-image">
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -37,16 +39,10 @@
                 <a href="https://www.linkedin.com/in/anika-tahsin-meem" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/AnikaMeem" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://scholar.google.com/citations?hl=en&user=HMVsjfsAAAAJ&view_op=list_works" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-                <p><a href="CV_Anika_Tahsin_Meem.pdf" download>Download my resume</a></p>
+                <p><a href="CV_Anika_Tahsin_Meem.pdf" download>Download my resume</i></a></p>
             </div>
         </section>
 
-        <!-- Image Section -->
-        <section id="image" class="section">
-            <h2>My Photo</h2>
-            <img src="formal_image.HEIC" alt="Anika Tahsin Meem" class="profile-image">
-        </section>
-        
         <!-- Education Section -->
         <section id="education" class="section">
             <h2>Education</h2>
